crates/monitrs-tui/tests/snapshots/overlay_snapshots__notice_overlay_at_eighty_by_twenty_four.snap
---
source: crates/monitrs-tui/tests/overlay_snapshots.rs
expression: text_of(&buffer)
---
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|+ NOTICES ------------------------------------------------------ 6 critical ---+|
||! config sampling.history 24h clamped to 1h: above the supported maximum      ||
||! config sampling.history 1h clamped to 1825s: would exceed the history mem...||
||! collector /proc/diskstats read failed                                       ||
||! permission per-process I/O is not permitted at this privilege level; moni...||
||. export wrote 12 KiB to /tmp/monitrs.json                                    ||
||X process PID 31842 has already exited; no signal was sent                    ||
||Esc dismiss                                                                   ||
|+------------------------------------------------------------------------------+|
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
