crates/monitrs-tui/tests/snapshots/overlay_snapshots__signal_confirmation_for_a_zombie_ascii.snap
---
source: crates/monitrs-tui/tests/overlay_snapshots.rs
expression: text
---
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|               + CONFIRM ---------------------------------------------------------------+               |
|               |NAME          rustc                                                     |               |
|               |PID           31842                                                     |               |
|               |IDENTITY      pid 31842 start key 900100                                |               |
|               |USER            gabor                                                   |               |
|               |STATE         zombie                                                    |               |
|               |STARTED         1970-01-01 00:00:00 UTC                                 |               |
|               |AGE             01:03                                                   |               |
|               |THREADS         4                                                       |               |
|               |COMMAND       cargo build --release                                     |               |
|               |------------------------------------------------------------------------|               |
|               |REQUESTED ACTION                                                        |               |
|               |ACTION        SIGTERM (signal 15)                                       |               |
|               |CONSEQUENCE                                                             |               |
|               |  asks the process to exit; it may clean up first, or ignore the request|               |
|               |                                                                        |               |
|               |the identity above is re-read immediately before delivery;              |               |
|               |if this PID has become another process the action is abandoned          |               |
|               |X PID 31842 has already exited (zombie); a signal would have no effect  |               |
|               |Esc close                                                               |               |
|               +------------------------------------------------------------------------+               |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
